--- a/tracking1.html
+++ b/tracking1.html
@@ -49,11 +49,11 @@
 <body>
 
 <div class="page-wrapper">
-    <aside class="ad-sidebar" style="width:160px;"><div class="ad-placeholder" style="height:600px;">Ad</div></aside>
+    <aside class="ad-sidebar" style="width:160px;"><div class="ad-placeholder" style="height:600px;">.</div></aside>
 
     <main class="main-content">
         <div class="dashboard">
-            <div class="header-box"><h2 style="margin:0; font-size: 1.4rem;">Pakistan Railways Live GPS</h2></div>
+            <div class="header-box"><h2 style="margin:0; font-size: 1.4rem;">Pakistan Railways(Live Tracker)</h2></div>
 
             <div class="controls">
                 <div>
@@ -89,10 +89,10 @@
             </div>
             <div id="statusMsg" class="status-msg">System Initializing...</div>
         </div>
-        <footer style="text-align: center; padding: 20px; color: #888; font-size: 12px;">© 2026 Secure Railway Tracker</footer>
+        <footer style="text-align: center; padding: 20px; color: #888; font-size: 12px;">--</footer>
     </main>
 
-    <aside class="ad-sidebar" style="width:160px;"><div class="ad-placeholder" style="height:600px;">Ad</div></aside>
+    <aside class="ad-sidebar" style="width:160px;"><div class="ad-placeholder" style="height:600px;">.</div></aside>
 </div>
 
 <script>
