--- a/tracking1.html
+++ b/tracking1.html
@@ -93,7 +93,7 @@
 </div>
 
 <script>
-    const API_BASE = "https://gibraltar-exams-undo-orlando.trycloudflare.com";
+    const API_BASE = "https://script.google.com/macros/s/AKfycbyILz_a27_sXqT5jNE-jQS3VsgqhBedxSVGyug-L2RpRQnvL5YCMBwbz0Dgs3JqTbnGoA/exec";
 
     let stompClient = null;
     let stations = [];
