--- a/Tracker/index.html
+++ b/Tracker/index.html
@@ -54,7 +54,14 @@ td { padding:15px; border-bottom:1px solid #eee; font-size:14px; }
 
 <div class="dashboard">
   <div class="header-box"><h2 style="margin:0;">Pakistan Railways(Live Tracker)</h2></div>
+<!-- MENU -->
+<nav>
+  <a href="index.html">Home</a>
+  <a href="timing.html">Train Timing</a>
+  <a href="ticketing.html">Ticketing</a>
+  <a href="tracking1.html">Train Tracking</a>
 
+</nav>
   <div class="controls">
       <div>
           <label>Select Date</label>
