--- a/Tracker/index.html
+++ b/Tracker/index.html
@@ -48,6 +48,25 @@ td { padding:15px; border-bottom:1px solid #eee; font-size:14px; }
 
 /* ===== FOOTER ===== */
 .footer-text { text-align: center; font-size: 14px; color: #555; margin-top: 20px; }
+
+  /* ================= NAV ================= */
+nav {
+  background-color: rgba(0, 0, 50, 0.9);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+nav a {
+  color: white;
+  padding: 12px 20px;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+nav a:hover {
+  background-color: #1a237e;
+}
 </style>
 </head>
 <body>
