--- a/prtracker/index.html
+++ b/prtracker/index.html
@@ -75,7 +75,14 @@ nav a:hover {
 
 <div class="dashboard">
   <div class="header-box"><h2 style="margin:0;">Pakistan Railways(Live Tracker)</h2></div>
+<!-- MENU -->
+<nav>
+  <a href="index.html">Home</a>
+  <a href="timing.html">Train Timing</a>
+  <a href="ticketing.html">Ticketing</a>
+  <a href="tracking1.html">Train Tracking</a>
 
+</nav>
   <div class="controls">
       <div>
           <label>Select Date</label>
