--- a/prtracker/index.html
+++ b/prtracker/index.html
@@ -72,9 +72,19 @@ nav a:hover {
 </style>
 </head>
 <body>
+<header class="main-header">
+  <div class="header-left">
+    <img src="https://drive.google.com/thumbnail?id=1WptR4123r4Le2CahaXv9khTtmptZvHOn&sz=w80" alt="Pakistan Railways Logo">
+  </div>
 
-<div class="dashboard">
-  <div class="header-box"><h2 style="margin:0;">Pakistan Railways(Live Tracker)</h2></div>
+  <div class="header-center">
+    Pakistan Railways – Sukkur Division
+  </div>
+
+  <div class="header-right">
+    <img src="https://drive.google.com/thumbnail?id=1UD6SmPAI9x-y22oW4CIgrDaItR4MHttx&sz=w150" alt="Division Logo">
+  </div>
+</header>
 <!-- MENU -->
 <nav>
   <a href="index.html">Home</a>
