--- a/prtracker/index.html
+++ b/prtracker/index.html
@@ -68,7 +68,37 @@ nav a {
 nav a:hover {
   background-color: #1a237e;
 }
+/* ================= HEADER ================= */
+.main-header {
+  background-color: #2e7d32;
+  color: white;
+  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
+/* Left & Right logos */
+.header-left img,
+.header-right img {
+  height: 50px;
+  width: auto;
+}
+
+/* Center title */
+.header-center {
+  font-size: 22px;
+  font-weight: bold;
+  text-align: center;
+  flex: 1;
+}
+
+/* Logos alignment */
+.header-left,
+.header-right {
+  width: 60px;
+  text-align: center;
+}
 </style>
 </head>
 <body>
