--- a/prtracker/index.html
+++ b/prtracker/index.html
@@ -108,7 +108,7 @@ nav a:hover {
   </div>
 
   <div class="header-center">
-    Pakistan Railways – Sukkur Division
+    Pakistan Railways - Live Tracker
   </div>
 
   <div class="header-right">
