--- a/prtracker/index.html
+++ b/prtracker/index.html
@@ -5,50 +5,61 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pakistan Railways - Live Tracker</title>
 <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+
 <style>
-:root { --pk-green: #005a32; --pk-light-green: #2e7d32; --bg-gray: #f0f2f5; }
-body { font-family: 'Segoe UI', sans-serif; background-color: var(--bg-gray); margin:0; padding:20px; color:#333; }
-.dashboard { max-width:1250px; margin:auto; background:#fff; padding:25px; border-radius:12px; box-shadow:0 4px 20px rgba(0,0,0,0.08); }
-.header-box { background:var(--pk-green); color:white; padding:20px; border-radius:10px 10px 0 0; text-align:center; }
-.controls { display:grid; grid-template-columns:1fr 2fr 1fr; gap:20px; background:#e8f5e9; padding:20px; border-radius:8px; margin-bottom:25px; align-items:end; }
-label { font-weight:bold; color:var(--pk-light-green); display:block; margin-bottom:5px; }
-input, select { padding:12px; border:1px solid #ccc; border-radius:6px; width:100%; font-size:15px; }
-
-/* Table with side panels wrapper */
-.table-wrapper { display:flex; justify-content:center; gap:20px; }
-.side-panel { width:120px; min-width:100px; background:#f9f9f9; border-radius:8px; text-align:center; padding:10px; font-size:12px; color:#666; }
-.table-container { flex:1; overflow-x:auto; }
-
-table { width:100%; border-collapse:collapse; background:white; border-radius:8px; overflow:hidden; min-width:600px; }
-th { background:var(--pk-light-green); color:white; padding:15px; text-align:left; font-size:13px; text-transform:uppercase; }
-td { padding:15px; border-bottom:1px solid #eee; font-size:14px; }
-.delay-red { color:#c62828; font-weight:bold; }
-.speed-val { font-family: 'Courier New', monospace; font-weight:bold; color:#1565c0; }
-.status-msg { font-size:12px; color:#666; margin-top:10px; font-style:italic; }
-
-/* Mobile Responsive */
-@media(max-width:768px){
-  .controls { grid-template-columns:1fr 1fr; gap:10px; }
-  input, select { font-size:14px; padding:10px; }
-  th, td { padding:12px; font-size:13px; }
+:root {
+  --pk-green: #005a32;
+  --pk-light-green: #2e7d32;
+  --bg-gray: #f0f2f5;
 }
 
-@media(max-width:480px){
-  .controls { grid-template-columns:1fr; gap:10px; }
-  input, select { font-size:13px; padding:8px; }
-  .table-wrapper { flex-direction:column; gap:0; }
-  .side-panel { display:none; }
-  table { min-width:100%; }
-  table thead { display:none; }
-  table, tbody, tr, td { display:block; width:100%; }
-  tr { margin-bottom:15px; border-bottom:2px solid var(--pk-green); }
-  td { text-align:right; padding:10px; position:relative; }
-  td::before { content: attr(data-label); position:absolute; left:10px; font-weight:bold; text-transform:uppercase; color:#666; font-size:12px; }
+body {
+  font-family: 'Segoe UI', sans-serif;
+  background-color: var(--bg-gray);
+  margin: 0;
+  padding: 20px;
+  color: #333;
 }
 
-/* ===== FOOTER ===== */
-.footer-text { text-align: center; font-size: 14px; color: #555; margin-top: 20px; }
-  /* ================= NAVIGATION ================= */
+.dashboard {
+  max-width: 1250px;
+  margin: auto;
+  background: #fff;
+  padding: 25px;
+  border-radius: 12px;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.08);
+}
+
+/* ================= HEADER ================= */
+.main-header {
+  background-color: #2e7d32;
+  color: white;
+  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-left img,
+.header-right img {
+  height: 50px;
+  width: auto;
+}
+
+.header-center {
+  font-size: 22px;
+  font-weight: bold;
+  text-align: center;
+  flex: 1;
+}
+
+.header-left,
+.header-right {
+  width: 60px;
+  text-align: center;
+}
+
+/* ================= NAV ================= */
 nav {
   background-color: rgba(0, 0, 50, 0.9);
   display: flex;
@@ -61,100 +72,196 @@ nav a {
   padding: 12px 20px;
   text-decoration: none;
   font-size: 16px;
-  text-align: center;
   transition: background 0.3s;
 }
 
 nav a:hover {
   background-color: #1a237e;
 }
-/* ================= HEADER ================= */
-.main-header {
-  background-color: #2e7d32;
-  color: white;
-  padding: 5px 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+
+/* ================= CONTROLS ================= */
+.controls {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 20px;
+  background: #e8f5e9;
+  padding: 20px;
+  border-radius: 8px;
+  margin: 25px 0;
 }
 
-/* Left & Right logos */
-.header-left img,
-.header-right img {
-  height: 50px;
-  width: auto;
-}
-
-/* Center title */
-.header-center {
-  font-size: 22px;
+label {
   font-weight: bold;
-  text-align: center;
-  flex: 1;
+  color: var(--pk-light-green);
+  display: block;
+  margin-bottom: 5px;
 }
 
-/* Logos alignment */
-.header-left,
-.header-right {
-  width: 60px;
+input {
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  width: 100%;
+  font-size: 15px;
+}
+
+/* ================= TABLE LAYOUT ================= */
+.table-wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.side-panel {
+  width: 120px;
+  min-width: 100px;
+  background: #f9f9f9;
+  border-radius: 8px;
   text-align: center;
+  padding: 10px;
+  font-size: 12px;
+  color: #666;
+}
+
+/* IMPORTANT: enable horizontal scrolling */
+.table-container {
+  flex: 1;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+table {
+  width: 100%;
+  min-width: 900px; /* forces scroll on mobile */
+  border-collapse: collapse;
+  background: white;
+  border-radius: 8px;
+}
+
+th {
+  background: var(--pk-light-green);
+  color: white;
+  padding: 15px;
+  text-align: left;
+  font-size: 13px;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+
+td {
+  padding: 15px;
+  border-bottom: 1px solid #eee;
+  font-size: 14px;
+  white-space: nowrap;
+}
+
+.delay-red {
+  color: #c62828;
+  font-weight: bold;
+}
+
+.speed-val {
+  font-family: 'Courier New', monospace;
+  font-weight: bold;
+  color: #1565c0;
+}
+
+.status-msg {
+  font-size: 12px;
+  color: #666;
+  margin-top: 10px;
+  font-style: italic;
+}
+
+/* ================= MOBILE FIXES ONLY ================= */
+@media (max-width: 768px) {
+  .controls {
+    grid-template-columns: 1fr;
+    gap: 10px;
+  }
+
+  input {
+    font-size: 14px;
+    padding: 10px;
+  }
+
+  .side-panel {
+    display: none;
+  }
+}
+
+/* Footer */
+.footer-text {
+  text-align: center;
+  font-size: 14px;
+  color: #555;
+  margin-top: 20px;
 }
 </style>
 </head>
+
 <body>
+
 <header class="main-header">
   <div class="header-left">
-    <img src="https://drive.google.com/thumbnail?id=1WptR4123r4Le2CahaXv9khTtmptZvHOn&sz=w80" alt="Pakistan Railways Logo">
+    <img src="https://drive.google.com/thumbnail?id=1WptR4123r4Le2CahaXv9khTtmptZvHOn&sz=w80">
   </div>
-
-  <div class="header-center">
-    Pakistan Railways - Live Tracker
-  </div>
-
+  <div class="header-center">Pakistan Railways - Live Tracker</div>
   <div class="header-right">
-    <img src="https://drive.google.com/thumbnail?id=1UD6SmPAI9x-y22oW4CIgrDaItR4MHttx&sz=w150" alt="Division Logo">
+    <img src="https://drive.google.com/thumbnail?id=1UD6SmPAI9x-y22oW4CIgrDaItR4MHttx&sz=w150">
   </div>
 </header>
-<!-- MENU -->
+
 <nav>
   <a href="index.html">Home</a>
   <a href="timing.html">Train Timing</a>
   <a href="ticketing.html">Ticketing</a>
   <a href="tracking1.html">Train Tracking</a>
-
 </nav>
-  <div class="controls">
-      <div>
-          <label>Select Date</label>
-          <input type="date" id="datePicker">
-      </div>
-      <div>
-          <label>Select Train</label>
-          <input list="trainList" id="trainSearch" placeholder="Type or select train" oninput="handleTrainSelect()" autocomplete="off">
-          <datalist id="trainList"></datalist>
-      </div>
+
+<div class="controls">
+  <div>
+    <label>Select Date</label>
+    <input type="date" id="datePicker">
   </div>
-
-  <!-- Table wrapper with side panels -->
-  <div class="table-wrapper">
-      <div class="side-panel">.</div>
-
-      <div class="table-container">
-        <table>
-          <thead>
-            <tr><th>Train</th><th>Next</th><th>Prev</th><th>Delay</th><th>Speed</th><th>Update</th></tr>
-          </thead>
-          <tbody id="liveRow">
-            <tr><td colspan="6" style="text-align:center;padding:40px;color:#999;">Search and select a train to begin.</td></tr>
-          </tbody>
-        </table>
-      </div>
-
-      <div class="side-panel">.</div>
+  <div>
+    <label>Select Train</label>
+    <input list="trainList" id="trainSearch" placeholder="Type or select train" autocomplete="off">
+    <datalist id="trainList"></datalist>
   </div>
-
-  <div id="statusMsg" class="status-msg">Initializing...</div>
 </div>
+
+<div class="table-wrapper">
+  <div class="side-panel">.</div>
+
+  <div class="table-container">
+    <table>
+      <thead>
+        <tr>
+          <th>Train</th>
+          <th>Next</th>
+          <th>Prev</th>
+          <th>Delay</th>
+          <th>Speed</th>
+          <th>Update</th>
+        </tr>
+      </thead>
+      <tbody id="liveRow">
+        <tr>
+          <td colspan="6" style="text-align:center;padding:40px;color:#999;">
+            Search and select a train to begin.
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="side-panel">.</div>
+</div>
+
+<div id="statusMsg" class="status-msg">Initializing...</div>
+
+
 
 <script>
 const API_BASE = "https://script.google.com/macros/s/AKfycbwfOEm2aU2Cfpy8RbTwagPmvYZmc-RBgTyxFYsoPszreId4cVnIpD19TOFieZUQrWnX7Q/exec";
