--- a/prtracker/index.html
+++ b/prtracker/index.html
@@ -213,11 +213,12 @@ td {
 </header>
 
 <nav>
-  <a href="index.html">Home</a>
-  <a href="timing.html">Train Timing</a>
-  <a href="ticketing.html">Ticketing</a>
-  <a href="tracking1.html">Train Tracking</a>
+  <a href="/index.html">Home</a>
+  <a href="/timing.html">Train Timing</a>
+  <a href="/ticketing.html">Ticketing</a>
+ 
 </nav>
+
 
 <div class="controls">
   <div>
