--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ function toggleMenu() {
 
     <!-- CENTER : TRAIN TRACKING LINK -->
     <div style="text-align:center;">
-      <a href="tracking1.html" class="footer-track">
+      <a href="/prtracker" class="seat-avail">Train Tracking</a>
         🚆 Train Tracking
       </a>
     </div>
