--- a/prtracker/index.html
+++ b/prtracker/index.html
@@ -175,9 +175,9 @@ Pakistan Railways - Live Tracker
 </header>
 
 <nav>
-<a href="index.html">Home</a>
-<a href="timing.html">Train Timing</a>
-<a href="ticketing.html">Ticketing</a>
+<a href="/index.html">Home</a>
+<a href="/timing.html">Train Timing</a>
+<a href="/ticketing.html">Ticketing</a>
 </nav>
 
 <div class="controls">
